# django-jawcracker

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
jawcracker/: apps.py  conf.py  forms.py  models.py  objects.py  urls.py  utils.py  views.py
jawcracker/management/commands/: jawcracker.py
jawcracker/migrations/: 0001_initial.py
jawcracker/static/jawcracker/: jawcracker.css  jawcracker.js
jawcracker/templates/jawcracker/: base.html  language_list.html  translation_list.html
jawcracker/templates/jawcracker/fragments/: language_detail.html  language_list.html  translation_detail.html  translation_list.html
jawcracker/templates/jawcracker/includes/: language_detail.html  language_list.html  language_search.html  translation_detail.html  translation_list.html  translation_search.html
