[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-jawcracker"
version = "0.1.1"
description = "A Django app for managing translation .po files via a web UI"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "polib",
]

[tool.setuptools.package-data]
jawcracker = ["templates/**/*", "static/**/*"]

[tool.setuptools.packages.find]
include = ["jawcracker*"]
